--- a/inteview-app/package.json
+++ b/inteview-app/package.json
@@ -8,13 +8,18 @@
     "start": "next start",
     "lint": "next lint"
   },
+
   "dependencies": {
+    "antd": "^4.21.5",
+    "axios": "^0.27.2",
     "next": "12.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.1"
   }
 }
+
